--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -5,7 +5,7 @@
 # Please visit documentation: https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp8266_display, esp8266_display_dallas, esp8266_PIRmod, esp8266_multirelay, esp8266_staircase_mod, esp8266_no_mods, esp32_display, esp32_display_dallas, esp32_PIRmod, esp32_multirelay, esp32_staircase_mod, esp32_no_mods, esp32_dmx, esp32s2_saola, esp01_1m_full_shield, esp32_display_rotary, esp32_pico_kit, SP501E_2m, SP511E_2M, esp32_twilightlord_16mb, esp32_ethernet, esp8266_display_debug, esp8266_staircase_mod_debug, esp32_display_debug, esp32_staircase_mod_debug
+default_envs = esp8266_display, esp8266_display_dallas, esp8266_PIRmod, esp8266_multirelay, esp8266_staircase_mod, esp8266_no_mods, esp32_display, esp32_display_dallas, esp32_PIRmod, esp32_multirelay, esp32_staircase_mod, esp32_no_mods, esp32_dmx, esp32s2_saola, esp32c3, esp01_1m_full_shield, esp32_display_rotary, esp32_pico_kit, SP501E_2m, SP511E_2M, esp32_twilightlord_16mb, esp32_ethernet, esp8266_display_debug, esp8266_staircase_mod_debug, esp32_display_debug, esp32_staircase_mod_debug
 
 [env:esp8266_display]
 board = d1_mini
