--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -257,7 +257,7 @@ lib_deps = ${esp32.lib_deps}
 
 [env:esp32_no_mods]
 board = esp32dev
-platform = espressif32@3.2
+platform = espressif32@3.5
 upload_speed = 460800
 board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 ;board_build.partitions = tools/WLED_ESP32_16MB.csv
@@ -275,17 +275,23 @@ build_flags = ${common.build_flags_esp32}
 lib_deps = ${esp32.lib_deps}
 
 [env:esp32_ethernet]
-board = esp32dev
+board = esp32-poe
 board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
-platform = espressif32@3.2
+platform = espressif32@3.5
 upload_speed = 460800
+build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=ESP32_Ethernet
+  -D RLYPIN=-1
+  -D IRPIN=-1
+  -D BTNPIN=-1
+  -D WLED_USE_ETHERNET
+  -D WLED_DISABLE_ALEXA
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
-  -D WLED_RELEASE_NAME=ESP32_Ethernet
-  -D WLED_ENABLE_ETHERNET
-  -D IRPIN=-1
+  -D WLED_DISABLE_LOXONE
+  -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
   
