--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -205,6 +205,7 @@ build_flags = ${common.build_flags_esp32}
   -D FLD_PIN_SCL=22
   -D FLD_PIN_SDA=21
   -D IRPIN=-1
+  -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
