--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -277,7 +277,7 @@ lib_deps = ${esp32.lib_deps}
 
 [env:esp32_ethernet]
 board = esp32-poe
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
+;board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
@@ -295,7 +295,8 @@ build_flags = ${common.build_flags_esp32}
   -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
-  
+board_build.partitions = ${esp32.default_partitions}
+
 [env:esp32_dmx]
 board = esp32dev
 platform = espressif32@3.5
@@ -534,6 +535,31 @@ build_flags = ${common.build_flags_esp32}
 ;  -D DEBUG=1
   -D WLED_DEBUG
 ;  -DDEBUG_ESP_WIFI
+  -UWLED_USE_MY_CONFIG
+lib_deps = ${esp32.lib_deps}
+  OneWire@~2.3.6
+  U8g2@~2.28.8
+
+[env:esp32_testing_board]
+board = esp32dev
+platform = espressif32@3.5
+upload_speed = 460800
+board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  -D LEDPIN=16
+  -D USERMOD_DALLASTEMPERATURE
+  -D TEMPERATURE_PIN=25
+  -D USERMOD_FOUR_LINE_DISPLAY
+# FOUR_LINE_DISPLAY uses I2C pins (21 & 22 or 5 & 4)
+  -D FLD_PIN_SCL=22
+  -D FLD_PIN_SDA=21
+  -D IRPIN=-1
+  -D USERMOD_MULTI_RELAY  # GPIO - 12, 23, 22 & 21
+  -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
