--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -544,12 +544,12 @@ lib_deps = ${esp32.lib_deps}
 board = esp32dev
 platform = espressif32@3.5
 upload_speed = 460800
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
+  -D WLED_DISABLE_LOXONE
   -D LEDPIN=16
   -D USERMOD_DALLASTEMPERATURE
   -D TEMPERATURE_PIN=25
@@ -564,3 +564,24 @@ build_flags = ${common.build_flags_esp32}
 lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
   U8g2@~2.28.8
+board_build.partitions = ${esp32.default_partitions}
+
+[env:esp32_eth_dallas]
+board = esp32-poe
+platform = espressif32@3.5
+upload_speed = 460800
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_DISABLE_LOXONE
+  -D WLED_USE_ETHERNET
+;  -D LEDPIN=16
+  -D USERMOD_DALLASTEMPERATURE
+  -D TEMPERATURE_PIN=25
+  -D WLED_DEBUG
+  -UWLED_USE_MY_CONFIG
+lib_deps = ${esp32.lib_deps}
+  OneWire@~2.3.6
+board_build.partitions = ${esp32.default_partitions}
