--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -104,9 +104,9 @@ upload_speed = 460800
 board_build.ldscript = ${common.ldscript_4m1m}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp8266}
-  -D WLED_DISABLE_BLYNK
-  -D WLED_DISABLE_CRONIXIE
-  -D WLED_DISABLE_HUESYNC
+;  -D WLED_DISABLE_BLYNK
+;  -D WLED_DISABLE_CRONIXIE
+;  -D WLED_DISABLE_HUESYNC
   -D IRPIN=-1
   -UWLED_USE_MY_CONFIG
 monitor_filters = esp8266_exception_decoder
@@ -120,9 +120,9 @@ upload_speed = 460800
 board_build.ldscript = ${common.ldscript_4m1m}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp8266}
-;  -D WLED_DISABLE_BLYNK
-;  -D WLED_DISABLE_CRONIXIE
-;  -D WLED_DISABLE_HUESYNC
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
   -D USERMOD_SSDR
   -D USERMOD_SN_PHOTORESISTOR
   -D IRPIN=-1
@@ -160,7 +160,7 @@ lib_deps = ${esp8266.lib_deps}
 board = esp8285
 ;upload_protocol = espota
 # exchange for your WLED IP
-;upload_port = "10.0.0.83"
+;upload_port = "10.0.0.xx"
 platform = ${common.platform_wled_default}
 board_build.ldscript = ${common.ldscript_2m1m}
 build_flags = ${common.build_flags_esp8266}
@@ -174,7 +174,6 @@ lib_deps = ${esp8266.lib_deps}
 [env:esp32_display]
 board = esp32dev
 platform = espressif32@3.5
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
@@ -186,12 +185,12 @@ build_flags = ${common.build_flags_esp32}
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
   U8g2@~2.28.8
+board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_display_dallas]
 board = esp32dev
 platform = espressif32@3.5
 upload_speed = 460800
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
@@ -210,12 +209,12 @@ build_flags = ${common.build_flags_esp32}
 lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
   U8g2@~2.28.8
+board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_multirelay]
 board = esp32dev
 platform = espressif32@3.5
 upload_speed = 460800
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
@@ -225,12 +224,12 @@ build_flags = ${common.build_flags_esp32}
   -D IRPIN=-1
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
+board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_PIRmod]
 board = esp32dev
 platform = espressif32@3.5
 upload_speed = 460800
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
@@ -240,12 +239,12 @@ build_flags = ${common.build_flags_esp32}
   -D IRPIN=-1
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
+board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_staircase_mod]
 board = esp32dev
 platform = espressif32@3.5
 upload_speed = 460800
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
@@ -255,13 +254,12 @@ build_flags = ${common.build_flags_esp32}
   -D IRPIN=-1
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
+board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_no_mods]
 board = esp32dev
 platform = espressif32@3.5
 upload_speed = 460800
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
-;board_build.partitions = tools/WLED_ESP32_16MB.csv
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
@@ -274,6 +272,7 @@ build_flags = ${common.build_flags_esp32}
   -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
+board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_ethernet]
 board = esp32-poe
@@ -301,7 +300,6 @@ board_build.partitions = ${esp32.default_partitions}
 board = esp32dev
 platform = espressif32@3.5
 upload_speed = 460800
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
@@ -311,23 +309,22 @@ build_flags = ${common.build_flags_esp32}
   -D WLED_ENABLE_DMX
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
+board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_pico_kit]
 board = pico32
 platform = espressif32@3.5
 upload_speed = 460800
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 monitor_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
-;  -D RLYPIN=19
-;  -D BTNPIN=17
   -D IRPIN=-1
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
+board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_twilightlord_16mb]
 board = esp32dev
@@ -341,16 +338,12 @@ build_flags = ${common.build_flags_esp32}
   -D LEDPIN=16
   -D RLYPIN=19
   -D IRPIN=-1
-;  -D DEBUG=1
-;  -D WLED_DEBUG
-;  -DDEBUG_ESP_WIFI
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
 
 [env:esp32_display_rotary]
 board = esp32dev
 platform = espressif32@3.5
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 upload_speed = 460800
 monitor_speed = 115200
 build_unflags = ${common.build_unflags}
@@ -373,12 +366,12 @@ build_flags = ${common.build_flags_esp32}
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
   U8g2@~2.28.8
+board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_SSDR]
 board = esp32dev
 platform = espressif32@3.5
 upload_speed = 460800
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
@@ -391,6 +384,7 @@ build_flags = ${common.build_flags_esp32}
   -D USERMOD_SN_PHOTORESISTOR
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
+board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_fan_dallas_16mb]
 board = esp32dev
@@ -461,7 +455,6 @@ lib_deps = ${esp8266.lib_deps}
 board = esp32dev
 platform = espressif32@3.5
 upload_speed = 460800
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
@@ -475,12 +468,12 @@ build_flags = ${common.build_flags_esp32}
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
     U8g2@~2.28.8
+board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_staircase_mod_debug]
 board = esp32dev
 platform = espressif32@3.5
 upload_speed = 460800
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
@@ -491,13 +484,13 @@ build_flags = ${common.build_flags_esp32}
   -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
+board_build.partitions = ${esp32.default_partitions}
 
 ############ Test board ################
 
 [env:esp32_4ch_fan_display_rotary_relays]
 board = esp32dev
 platform = espressif32@3.5
-board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 ;board_build.partitions = tools/WLED_ESP32_8MB.csv
 upload_speed = 460800
 monitor_speed = 115200
@@ -539,6 +532,7 @@ build_flags = ${common.build_flags_esp32}
 lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
   U8g2@~2.28.8
+board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_testing_board]
 board = esp32dev
