--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -269,7 +269,7 @@ build_flags = ${common.build_flags_esp32}
   -D RLYPIN=19
   -D BTNPIN=17
   -D IRPIN=-1
-  -D WLED_DEBUG
+;  -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
 board_build.partitions = ${esp32.default_partitions}
