--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 # ------------------------------------------------------------------------------
 
 # Travis CI binaries (use `platformio_override.ini` when building for your own board; see `platformio_override.ini.sample` for an example)
-; default_envs = travis_esp8266, travis_esp32
+ default_envs = travis_esp8266, travis_esp32
 
 # Release binaries
 ;default_envs = nodemcuv2, esp8266_2m, esp01_1m_full, esp32dev, esp32_eth, esp32s2_saola, esp32c3
