--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 # Travis CI binaries (use `platformio_override.ini` when building for your own board; see `platformio_override.ini.sample` for an example)
 ; default_envs = travis_esp8266, travis_esp32
-
+default_envs = d1_mini, esp32dev
 # Release binaries
 ;default_envs = nodemcuv2, esp8266_2m, esp01_1m_full, esp32dev, esp32_eth, esp32s2_saola, esp32c3
 
@@ -23,12 +23,12 @@
 ; default_envs = esp8266_2m
 ; default_envs = esp01_1m_full
 ; default_envs = esp07
- default_envs = d1_mini
+; default_envs = d1_mini
 ; default_envs = heltec_wifi_kit_8
 ; default_envs = h803wf
 ; default_envs = d1_mini_debug
 ; default_envs = d1_mini_ota
- default_envs = esp32dev
+; default_envs = esp32dev
 ; default_envs = esp8285_4CH_MagicHome
 ; default_envs = esp8285_H801
 ; default_envs = d1_mini_5CH_Shojo_PCB
