--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -499,6 +499,7 @@ monitor_speed = 115200
 ;upload_port = "10.0.0.85"
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=ESP01
   -D BTNPIN=0
   -D LEDPIN=1 ; GPIO - 4, 16, 17
   -D RLYPIN=-1
