--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -5,7 +5,7 @@
 # Please visit documentation: https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp8266_display, esp8266_display_dallas, esp8266_PIRmod, esp8266_multirelay, esp8266_staircase_mod, esp8266_no_mods, esp32_display, esp32_display_dallas, esp32_PIRmod, esp32_multirelay, esp32_staircase_mod, esp32_no_mods, esp32_dmx, esp32s2_saola, esp32c3, esp01_1m_full_shield, esp32_display_rotary, esp32_pico_kit, SP501E_2m, SP511E_2M, esp32_twilightlord_16mb, esp32_ethernet, esp8266_display_debug, esp8266_staircase_mod_debug, esp32_display_debug, esp32_staircase_mod_debug
+default_envs = esp8266_display, esp8266_display_dallas, esp8266_PIRmod, esp8266_multirelay, esp8266_staircase_mod, esp8266_no_mods, esp32_display, esp32_display_dallas, esp32_PIRmod, esp32_multirelay, esp32_staircase_mod, esp32_no_mods, esp32_dmx, esp32s2_saola, esp32c3, esp01_1m_full_shield, esp32_display_rotary, esp32_pico_kit, SP501E_2m, SP511E_2M, esp32_twilightlord_16mb, esp32_ethernet, esp8266_display_debug, esp8266_staircase_mod_debug, esp32_display_debug, esp32_staircase_mod_debug, esp32_display_dallas_rotary_encoder_battery_stat
 
 [env:esp8266_display]
 board = d1_mini
@@ -486,7 +486,7 @@ build_flags = ${common.build_flags_esp32}
 lib_deps = ${esp32.lib_deps}
 board_build.partitions = ${esp32.default_partitions}
 
-############ Test board ################
+############ Test boards ################
 
 [env:esp32_4ch_fan_display_rotary_relays]
 board = esp32dev
@@ -579,4 +579,41 @@ build_flags = ${common.build_flags_esp32}
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
+board_build.partitions = ${esp32.default_partitions}
+
+[env:esp32_display_dallas_rotary_encoder_battery_stat]
+board = esp32dev
+platform = ${esp32.platform}
+platform_packages = ${common.platform_packages}
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32} 
+  -D USERMOD_DALLASTEMPERATURE
+  -D USERMOD_BATTERY_STATUS_BASIC
+  -D USERMOD_FOUR_LINE_DISPLAY
+  -D USE_ALT_DISPlAY
+  -D USERMOD_ROTARY_ENCODER_UI
+  -D USERMOD_BATTERY_MIN_VOLTAGE=6.0
+  -D USERMOD_BATTERY_MAX_VOLTAGE=8.4
+lib_deps = ${esp32.lib_deps}
+  OneWire@~2.3.6
+  olikraus/U8g2@^2.28.8
+board_build.partitions = ${esp32.default_partitions}
+
+[env:esp32_ttgo_t]
+board = esp32dev
+platform = ${esp32.platform}
+platform_packages = ${common.platform_packages}
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D LEDPIN=2
+  -D BTNPIN=35
+;  -D IRPIN=15
+  -D USERMOD_BATTERY_STATUS_BASIC
+  -D USERMOD_BATTERY_MIN_VOLTAGE=6.0
+  -D USERMOD_BATTERY_MAX_VOLTAGE=8.4
+  -D USERMOD_BATTERY_MEASUREMENT_PIN=32
+  -D ST7789_DRIVER
+lib_deps = ${esp32.lib_deps}
+  bodmer/TFT_eSPI @ ^2.4.70
+monitor_filters = esp32_exception_decoder
 board_build.partitions = ${esp32.default_partitions}
