--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -265,9 +265,9 @@ build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
-  -D LEDPIN=16
-  -D RLYPIN=19
-  -D BTNPIN=17
+  ; -D LEDPIN=16
+  ; -D RLYPIN=19
+  ; -D BTNPIN=17
   -D IRPIN=-1
 ;  -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
