--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -673,9 +673,16 @@ build_flags = ${common.build_flags_esp32}
   -D USERMOD_PWM_FAN
   -D PWM_PIN=32
   -D TACHO_PIN=33
+  # Ambient light sensor BH1750
+  -D USERMOD_BH1750
+  -D USERMOD_BH1750_FIRST_MEASUREMENT_AT=30000
+  -D USERMOD_BH1750_MAX_MEASUREMENT_INTERVAL=60000
+;  -D USERMOD_BH1750_MIN_MEASUREMENT_INTERVAL=10000
+;  -D USERMOD_BH1750_OFFSET_VALUE=2
 ;  -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
   U8g2@~2.32.10 # Uncoment for display mod
   paulstoffregen/OneWire@~2.3.6 # Uncoment for temperature mod
+  claws/BH1750 @ ^1.3.0 # Uncoment for light sensor mod
 board_build.partitions = ${esp32.default_partitions}
