temp usermod with HA autodiscovery

--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -488,53 +488,6 @@ board_build.partitions = ${esp32.default_partitions}
 
 ############ Test boards ################
 
-[env:esp32_4ch_fan_display_rotary_relays]
-board = esp32dev
-platform = espressif32@3.5
-;board_build.partitions = tools/WLED_ESP32_8MB.csv
-upload_speed = 460800
-monitor_speed = 115200
-;upload_protocol = espota                                                                                                                                                                                                                                           upload_protocol = espota
-# exchange for your WLED IP
-;upload_port = "10.0.0.85"
-build_unflags = ${common.build_unflags}
-build_flags = ${common.build_flags_esp32}
-  -D WLED_RELEASE_NAME=ESP01
-  -D BTNPIN=0
-  -D LEDPIN=1 ; GPIO - 4, 16, 17
-  -D RLYPIN=-1
-  -D IRPIN=-1
-  -D WLED_DISABLE_ALEXA
-  -D WLED_DISABLE_BLYNK
-  -D WLED_DISABLE_CRONIXIE
-  -D WLED_DISABLE_HUESYNC
-  -D WLED_DISABLE_LOXONE
-  -D USERMOD_DALLASTEMPERATURE
-  -D TEMPERATURE_PIN=25
-  -D USERMOD_MODE_SORT
-  -D USERMOD_FOUR_LINE_DISPLAY
-;  -D FLD_SPI_DEFAULT
-;  -D FLD_TYPE=SSD1306_SPI64
-;  -D FLD_PIN_CLOCKSPI=14
-;  -D FLD_PIN_DATASPI=13
-;  -D FLD_PIN_DC=26
-;  -D FLD_PIN_CS=27
-;  -D FLD_PIN_RESET=15
-  -D USERMOD_ROTARY_ENCODER_UI
-  -D ENCODER_DT_PIN=18
-  -D ENCODER_CLK_PIN=5
-  -D ENCODER_SW_PIN=19
-  -D USERMOD_MULTI_RELAY  # GPIO - 12, 23, 22 & 21
-  -D USERMOD_PWM_FAN ; GPIO - 32, 33
-;  -D DEBUG=1
-  -D WLED_DEBUG
-;  -DDEBUG_ESP_WIFI
-  -UWLED_USE_MY_CONFIG
-lib_deps = ${esp32.lib_deps}
-  OneWire@~2.3.6
-  U8g2@~2.32.10
-board_build.partitions = ${esp32.default_partitions}
-
 [env:esp32_testing_board]
 board = esp32dev
 platform = espressif32@3.5
@@ -685,4 +638,60 @@ lib_deps = ${esp32.lib_deps}
   U8g2@~2.32.10 # Uncoment for display mod
   paulstoffregen/OneWire@~2.3.6 # Uncoment for temperature mod
   claws/BH1750 @ ^1.3.0 # Uncoment for light sensor mod
+board_build.partitions = ${esp32.default_partitions}
+
+[env:esp32_4ch_fan_display_rotary_relays]
+board = esp32dev
+platform = espressif32@3.5
+;board_build.partitions = tools/WLED_ESP32_8MB.csv
+upload_speed = 460800
+monitor_speed = 115200
+;upload_protocol = espota                                                                                                                                                                                                                                           upload_protocol = espota
+# exchange for your WLED IP
+;upload_port = "10.0.0.85"
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=ESP32_4CH_board
+  -D BTNPIN=-1
+;  -D LEDPIN=1 ; GPIO - 2, 4, 16, 17
+  -D DATA_PINS=2,4,16,17
+  -D PIXEL_COUNTS=100,100,100,100
+  -D RLYPIN=-1
+  -D IRPIN=-1
+  -D WLED_DISABLE_ALEXA
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_DISABLE_LOXONE
+# Temperature usermod
+  -D USERMOD_DALLASTEMPERATURE
+  -D TEMPERATURE_PIN=25
+# Display usermod
+  -D USERMOD_FOUR_LINE_DISPLAY
+  -D USE_ALT_DISPlAY
+  -D FLD_SPI_DEFAULT
+  -D FLD_TYPE=SSD1306_SPI64
+  -D FLD_PIN_CLOCKSPI=14
+  -D FLD_PIN_DATASPI=13
+  -D FLD_PIN_CS=15
+  -D FLD_PIN_DC=26
+  -D FLD_PIN_RESET=27
+# Rotary encoder usermod
+  -D USERMOD_ROTARY_ENCODER_UI
+  -D ENCODER_DT_PIN=5
+  -D ENCODER_CLK_PIN=18
+  -D ENCODER_SW_PIN=19
+# Multirelay usermod
+  -D USERMOD_MULTI_RELAY  # GPIO - 12, 23, 22 & 21
+# PWM Fan usermod
+  -D USERMOD_PWM_FAN ; GPIO - 32, 33
+  -D PWM_PIN=32
+  -D TACHO_PIN=33
+;  -D DEBUG=1
+;  -D WLED_DEBUG
+;  -DDEBUG_ESP_WIFI
+  -UWLED_USE_MY_CONFIG
+lib_deps = ${esp32.lib_deps}
+  OneWire@~2.3.6
+  U8g2@~2.32.10
 board_build.partitions = ${esp32.default_partitions}
