--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -695,3 +695,44 @@ lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
   U8g2@~2.32.10
 board_build.partitions = ${esp32.default_partitions}
+
+[env:esp32_bme280_display]
+board = esp32dev
+platform = espressif32@3.5
+;board_build.partitions = tools/WLED_ESP32_8MB.csv
+upload_speed = 460800
+monitor_speed = 115200
+;upload_protocol = espota                                                                                                                                                                                                                                           upload_protocol = espota
+# exchange for your WLED IP
+;upload_port = "10.0.0.85"
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_bme280_display
+  -D BTNPIN=-1
+  -D LEDPIN=2 ; GPIO - 2, 4, 16, 17
+;  -D DATA_PINS=2,4,16,17
+;  -D PIXEL_COUNTS=100,100,100,100
+  -D RLYPIN=-1
+  -D IRPIN=-1
+  -D WLED_DISABLE_ALEXA
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_DISABLE_LOXONE
+# Temperature usermod
+  -D USERMOD_BME280
+# I2C display
+  -D USERMOD_FOUR_LINE_DISPLAY
+  -D USE_ALT_DISPlAY
+  -D FLD_PIN_SCL=22
+  -D FLD_PIN_SDA=21
+  -D FLD_TYPE=SSD1306
+;  -D DEBUG=1
+  -D WLED_DEBUG
+;  -DDEBUG_ESP_WIFI
+  -UWLED_USE_MY_CONFIG
+lib_deps = ${esp32.lib_deps}
+  Wire
+  BME280@~3.0.0
+  U8g2@~2.32.10
+board_build.partitions = ${esp32.default_partitions}
