--- a/platformio.ini
+++ b/platformio.ini
@@ -346,6 +346,8 @@ framework = arduino
 board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 board_build.flash_mode = qio
 upload_speed = 460800
+build_flags =
+  -D WLED_RELEASE_NAME=esp32s2_saola
 build_unflags = ${common.build_unflags}
 lib_deps = ${esp32s2.lib_deps}
 
@@ -356,6 +358,8 @@ platform_packages =
 framework = arduino
 board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 upload_speed = 460800
+build_flags =
+  -D WLED_RELEASE_NAME=esp32c3
 build_unflags = ${common.build_unflags}
 lib_deps = ${esp32c3.lib_deps}
 
