--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -15,6 +15,7 @@ upload_speed = 460800
 board_build.ldscript = ${common.ldscript_4m1m}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp8266}
+  -D WLED_RELEASE_NAME=esp8266_display
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -33,6 +34,7 @@ upload_speed = 460800
 board_build.ldscript = ${common.ldscript_4m1m}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp8266}
+  -D WLED_RELEASE_NAME=esp8266_display_dallas
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -53,6 +55,7 @@ upload_speed = 460800
 board_build.ldscript = ${common.ldscript_4m1m}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp8266}
+  -D WLED_RELEASE_NAME=esp8266_PIRmod
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -70,6 +73,7 @@ upload_speed = 460800
 board_build.ldscript = ${common.ldscript_4m1m}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp8266}
+  -D WLED_RELEASE_NAME=esp8266_multirelay
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -87,6 +91,7 @@ upload_speed = 460800
 board_build.ldscript = ${common.ldscript_4m1m}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp8266}
+  -D WLED_RELEASE_NAME=esp8266_staircase_mod
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -104,6 +109,7 @@ upload_speed = 460800
 board_build.ldscript = ${common.ldscript_4m1m}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp8266}
+  -D WLED_RELEASE_NAME=esp8266_no_mods
 ;  -D WLED_DISABLE_BLYNK
 ;  -D WLED_DISABLE_CRONIXIE
 ;  -D WLED_DISABLE_HUESYNC
@@ -120,6 +126,7 @@ upload_speed = 460800
 board_build.ldscript = ${common.ldscript_4m1m}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp8266}
+  -D WLED_RELEASE_NAME=esp8266_SSDR
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -133,7 +140,7 @@ lib_deps = ${esp8266.lib_deps}
 [env:esp01_1m_full_shield]
 extends = env:esp01_1m_full
 build_flags = ${common.build_flags_esp8266}
-  -D WLED_RELEASE_NAME=ESP01
+  -D WLED_RELEASE_NAME=esp01_1m_full_shield
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -152,6 +159,7 @@ board = esp_wroom_02
 platform = ${common.platform_wled_default}
 board_build.ldscript = ${common.ldscript_2m512k}
 build_flags = ${common.build_flags_esp8266}
+  -D WLED_RELEASE_NAME=SP501E_2m
   -D LEDPIN=3
   -D BTNPIN=1
 lib_deps = ${esp8266.lib_deps}
@@ -164,6 +172,7 @@ board = esp8285
 platform = ${common.platform_wled_default}
 board_build.ldscript = ${common.ldscript_2m1m}
 build_flags = ${common.build_flags_esp8266}
+  -D WLED_RELEASE_NAME=SP511E_2m
   -D LEDPIN=3
   -D BTNPIN=2
   -D IRPIN=5
@@ -177,6 +186,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_display
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -193,6 +203,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_display_dallas
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -217,6 +228,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_multirelay
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -232,6 +244,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_PIRmod
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -247,6 +260,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_staircase_mod
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -262,6 +276,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_no_mods
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -281,7 +296,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
-  -D WLED_RELEASE_NAME=ESP32_Ethernet
+  -D WLED_RELEASE_NAME=esp32_ethernet
   -D RLYPIN=-1
   -D IRPIN=-1
   -D BTNPIN=-1
@@ -302,6 +317,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_dmx
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -318,6 +334,7 @@ upload_speed = 460800
 monitor_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_pico_kit
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -334,6 +351,7 @@ upload_speed = 460800
 monitor_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_twilightlord_16mb
   -D BTNPIN=17
   -D LEDPIN=16
   -D RLYPIN=19
@@ -348,6 +366,7 @@ upload_speed = 460800
 monitor_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_display_rotary
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -374,6 +393,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_SSDR
   -D WLED_DISABLE_BLYNK
 ;  -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -394,6 +414,7 @@ upload_speed = 460800
 monitor_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_fan_dallas_16mb
   -D BTNPIN=17
   -D LEDPIN=16
   -D RLYPIN=19
@@ -422,6 +443,7 @@ upload_speed = 460800
 board_build.ldscript = ${common.ldscript_4m1m}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp8266}
+  -D WLED_RELEASE_NAME=esp8266_display_debug
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -441,6 +463,7 @@ upload_speed = 460800
 board_build.ldscript = ${common.ldscript_4m1m}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp8266}
+  -D WLED_RELEASE_NAME=esp8266_staircase_mod_debug
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -457,6 +480,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_display_debug
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -476,6 +500,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_staircase_mod_debug
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -494,6 +519,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_testing_board
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -520,6 +546,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_eth_dallas
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -539,7 +566,8 @@ board = esp32dev
 platform = ${esp32.platform}
 platform_packages = ${common.platform_packages}
 build_unflags = ${common.build_unflags}
-build_flags = ${common.build_flags_esp32} 
+build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_display_dallas_rotary_encoder_battery_stat
   -D USERMOD_DALLASTEMPERATURE
   -D USERMOD_BATTERY_STATUS_BASIC
   -D USERMOD_FOUR_LINE_DISPLAY
@@ -558,6 +586,7 @@ platform = ${esp32.platform}
 platform_packages = ${common.platform_packages}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_RELEASE_NAME=esp32_ttgo_t
   -D LEDPIN=2
   -D BTNPIN=35
 ;  -D IRPIN=15
@@ -651,7 +680,7 @@ monitor_speed = 115200
 ;upload_port = "10.0.0.85"
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
-  -D WLED_RELEASE_NAME=ESP32_4CH_board
+  -D WLED_RELEASE_NAME=esp32_4ch_fan_display_rotary_relays
   -D BTNPIN=-1
 ;  -D LEDPIN=1 ; GPIO - 2, 4, 16, 17
   -D DATA_PINS=2,4,16,17
@@ -696,7 +725,7 @@ lib_deps = ${esp32.lib_deps}
   U8g2@~2.32.10
 board_build.partitions = ${esp32.default_partitions}
 
-[env:esp32_bme280_display]
+[env:esp32_bme280_display_rotary]
 board = esp32dev
 platform = espressif32@3.5
 ;board_build.partitions = tools/WLED_ESP32_8MB.csv
@@ -707,7 +736,7 @@ monitor_speed = 115200
 ;upload_port = "10.0.0.85"
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
-  -D WLED_RELEASE_NAME=esp32_bme280_display
+  -D WLED_RELEASE_NAME=esp32_bme280_display_rotary
   -D BTNPIN=-1
   -D LEDPIN=2 ; GPIO - 2, 4, 16, 17
 ;  -D DATA_PINS=2,4,16,17
@@ -727,8 +756,13 @@ build_flags = ${common.build_flags_esp32}
   -D FLD_PIN_SCL=22
   -D FLD_PIN_SDA=21
   -D FLD_TYPE=SSD1306
+# Rotary encoder usermod
+  -D USERMOD_ROTARY_ENCODER_UI
+  -D ENCODER_DT_PIN=5
+  -D ENCODER_CLK_PIN=18
+  -D ENCODER_SW_PIN=19
 ;  -D DEBUG=1
-  -D WLED_DEBUG
+;  -D WLED_DEBUG
 ;  -DDEBUG_ESP_WIFI
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
