--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -186,6 +186,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_display
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -203,6 +204,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_display_dallas
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -228,6 +230,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_multirelay
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -244,6 +247,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_PIRmod
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -260,6 +264,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_staircase_mod
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -276,6 +281,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_no_mods
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -296,6 +302,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_ethernet
   -D RLYPIN=-1
   -D IRPIN=-1
@@ -317,6 +324,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_dmx
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -334,6 +342,7 @@ upload_speed = 460800
 monitor_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_pico_kit
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -351,6 +360,7 @@ upload_speed = 460800
 monitor_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_twilightlord_16mb
   -D BTNPIN=17
   -D LEDPIN=16
@@ -366,6 +376,7 @@ upload_speed = 460800
 monitor_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_display_rotary
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -393,6 +404,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_SSDR
   -D WLED_DISABLE_BLYNK
 ;  -D WLED_DISABLE_CRONIXIE
@@ -414,6 +426,7 @@ upload_speed = 460800
 monitor_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_fan_dallas_16mb
   -D BTNPIN=17
   -D LEDPIN=16
@@ -480,6 +493,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_display_debug
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -500,6 +514,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_staircase_mod_debug
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -519,6 +534,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_testing_board
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -546,6 +562,7 @@ platform = espressif32@3.5
 upload_speed = 460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_eth_dallas
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
@@ -567,6 +584,7 @@ platform = ${esp32.platform}
 platform_packages = ${common.platform_packages}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_display_dallas_rotary_encoder_battery_stat
   -D USERMOD_DALLASTEMPERATURE
   -D USERMOD_BATTERY_STATUS_BASIC
@@ -586,6 +604,7 @@ platform = ${esp32.platform}
 platform_packages = ${common.platform_packages}
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_ttgo_t
   -D LEDPIN=2
   -D BTNPIN=35
@@ -610,6 +629,7 @@ monitor_speed = 115200
 ;upload_port = "10.0.0.94"
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
@@ -680,6 +700,7 @@ monitor_speed = 115200
 ;upload_port = "10.0.0.85"
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_4ch_fan_display_rotary_relays
   -D BTNPIN=-1
 ;  -D LEDPIN=1 ; GPIO - 2, 4, 16, 17
@@ -736,6 +757,7 @@ monitor_speed = 115200
 ;upload_port = "10.0.0.85"
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
   -D WLED_RELEASE_NAME=esp32_bme280_display_rotary
   -D BTNPIN=-1
   -D LEDPIN=2 ; GPIO - 2, 4, 16, 17
@@ -769,4 +791,287 @@ lib_deps = ${esp32.lib_deps}
   Wire
   BME280@~3.0.0
   U8g2@~2.32.10
+board_build.partitions = ${esp32.default_partitions}
+
+[env:esp32_Dallas_sensor_PWM_fan_mods]
+board = esp32dev
+platform = espressif32@3.5
+upload_speed = 460800
+monitor_speed = 115200
+;upload_protocol = espota
+# exchange for your WLED IP
+;upload_port = "10.0.0.94"
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_DISABLE_LOXONE
+  -D WLED_RELEASE_NAME=esp32_WLED_dev_board_01
+# Enable Ethernet shield
+;  -D WLED_USE_ETHERNET
+# Pins assigment and pixel count
+  -D BTNPIN=0
+  -D LEDPIN=2
+;  -D DATA_PINS=1,2
+;  -D PIXEL_COUNTS=150,150,150,150
+  -D IRPIN=-1
+  -D RLYPIN=16
+# User mods
+  # Dallas temperature sensor mod
+  -D USERMOD_DALLASTEMPERATURE
+  -D TEMPERATURE_PIN=4
+  # Display mod
+  # I2C display
+;   -D USERMOD_FOUR_LINE_DISPLAY
+;   -D USE_ALT_DISPlAY
+;   -D FLD_PIN_SCL=22
+;   -D FLD_PIN_SDA=21
+;   -D FLD_TYPE=SH1106
+;  -D FLD_TYPE=SSD1306
+  # SPI display
+  ; -DFLD_SPI_DEFAULT
+  ; -D FLD_TYPE=SSD1306_SPI64
+  ; -D FLD_PIN_CLOCKSPI=14
+  ; -D FLD_PIN_DATASPI=13
+  ; -D FLD_PIN_DC=26
+  ; -D FLD_PIN_CS=15
+  ; -D FLD_PIN_RESET=27
+  # Rotary encoder mod
+;   -D USERMOD_ROTARY_ENCODER_UI
+;   -D ENCODER_DT_PIN=18
+;   -D ENCODER_CLK_PIN=19
+;   -D ENCODER_SW_PIN=17
+  # Multirelay mod
+  ; -D USERMOD_MULTI_RELAY  # 12, 23, 22 & 21
+  # PWM Fan mod
+  -D USERMOD_PWM_FAN
+  -D PWM_PIN=32
+  -D TACHO_PIN=33
+  # Ambient light sensor BH1750
+;   -D USERMOD_BH1750
+;   -D USERMOD_BH1750_FIRST_MEASUREMENT_AT=30000
+;   -D USERMOD_BH1750_MAX_MEASUREMENT_INTERVAL=60000
+;  -D USERMOD_BH1750_MIN_MEASUREMENT_INTERVAL=10000
+;  -D USERMOD_BH1750_OFFSET_VALUE=2
+;  -D WLED_DEBUG
+  -UWLED_USE_MY_CONFIG
+lib_deps = ${esp32.lib_deps}
+;  U8g2@~2.32.15 # Uncoment for display mod
+  paulstoffregen/OneWire@~2.3.6 # Uncoment for temperature mod
+;  claws/BH1750 @ ^1.3.0 # Uncoment for light sensor mod
+board_build.partitions = ${esp32.default_partitions}
+
+[env:esp32_Dallas_sensor_PWM_fan_display_rotary_mods]
+board = esp32dev
+platform = espressif32@3.5
+upload_speed = 460800
+monitor_speed = 115200
+;upload_protocol = espota
+# exchange for your WLED IP
+;upload_port = "10.0.0.94"
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_DISABLE_LOXONE
+  -D WLED_RELEASE_NAME=esp32_WLED_dev_board_02
+# Enable Ethernet shield
+;  -D WLED_USE_ETHERNET
+# Pins assigment and pixel count
+  -D BTNPIN=0
+  -D LEDPIN=2
+;  -D DATA_PINS=1,2
+;  -D PIXEL_COUNTS=150,150,150,150
+  -D IRPIN=-1
+  -D RLYPIN=16
+# User mods
+  # Dallas temperature sensor mod
+  -D USERMOD_DALLASTEMPERATURE
+  -D TEMPERATURE_PIN=4
+  # Display mod
+  # I2C display
+  -D USERMOD_FOUR_LINE_DISPLAY
+  -D USE_ALT_DISPlAY
+  -D FLD_PIN_SCL=22
+  -D FLD_PIN_SDA=21
+  -D FLD_TYPE=SH1106
+;  -D FLD_TYPE=SSD1306
+  # SPI display
+  ; -DFLD_SPI_DEFAULT
+  ; -D FLD_TYPE=SSD1306_SPI64
+  ; -D FLD_PIN_CLOCKSPI=14
+  ; -D FLD_PIN_DATASPI=13
+  ; -D FLD_PIN_DC=26
+  ; -D FLD_PIN_CS=15
+  ; -D FLD_PIN_RESET=27
+  # Rotary encoder mod
+  -D USERMOD_ROTARY_ENCODER_UI
+  -D ENCODER_DT_PIN=18
+  -D ENCODER_CLK_PIN=19
+  -D ENCODER_SW_PIN=17
+  # Multirelay mod
+  ; -D USERMOD_MULTI_RELAY  # 12, 23, 22 & 21
+  # PWM Fan mod
+  -D USERMOD_PWM_FAN
+  -D PWM_PIN=32
+  -D TACHO_PIN=33
+  # Ambient light sensor BH1750
+;   -D USERMOD_BH1750
+;   -D USERMOD_BH1750_FIRST_MEASUREMENT_AT=30000
+;   -D USERMOD_BH1750_MAX_MEASUREMENT_INTERVAL=60000
+;  -D USERMOD_BH1750_MIN_MEASUREMENT_INTERVAL=10000
+;  -D USERMOD_BH1750_OFFSET_VALUE=2
+;  -D WLED_DEBUG
+  -UWLED_USE_MY_CONFIG
+lib_deps = ${esp32.lib_deps}
+  U8g2@~2.32.15 # Uncoment for display mod
+  paulstoffregen/OneWire@~2.3.6 # Uncoment for temperature mod
+;  claws/BH1750 @ ^1.3.0 # Uncoment for light sensor mod
+board_build.partitions = ${esp32.default_partitions}
+
+[env:esp32_Dallas_sensor_PWM_fan_display_rotary_ambient_light_sensor_mods]
+board = esp32dev
+platform = espressif32@3.5
+upload_speed = 460800
+monitor_speed = 115200
+;upload_protocol = espota
+# exchange for your WLED IP
+;upload_port = "10.0.0.94"
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_DISABLE_LOXONE
+  -D WLED_RELEASE_NAME=esp32_WLED_dev_board_03
+# Enable Ethernet shield
+;  -D WLED_USE_ETHERNET
+# Pins assigment and pixel count
+  -D BTNPIN=0
+  -D LEDPIN=2
+;  -D DATA_PINS=1,2
+;  -D PIXEL_COUNTS=150,150,150,150
+  -D IRPIN=-1
+  -D RLYPIN=16
+# User mods
+  # Dallas temperature sensor mod
+  -D USERMOD_DALLASTEMPERATURE
+  -D TEMPERATURE_PIN=4
+  # Display mod
+  # I2C display
+  -D USERMOD_FOUR_LINE_DISPLAY
+  -D USE_ALT_DISPlAY
+  -D FLD_PIN_SCL=22
+  -D FLD_PIN_SDA=21
+  -D FLD_TYPE=SH1106
+;  -D FLD_TYPE=SSD1306
+  # SPI display
+  ; -DFLD_SPI_DEFAULT
+  ; -D FLD_TYPE=SSD1306_SPI64
+  ; -D FLD_PIN_CLOCKSPI=14
+  ; -D FLD_PIN_DATASPI=13
+  ; -D FLD_PIN_DC=26
+  ; -D FLD_PIN_CS=15
+  ; -D FLD_PIN_RESET=27
+  # Rotary encoder mod
+  -D USERMOD_ROTARY_ENCODER_UI
+  -D ENCODER_DT_PIN=18
+  -D ENCODER_CLK_PIN=19
+  -D ENCODER_SW_PIN=17
+  # Multirelay mod
+  ; -D USERMOD_MULTI_RELAY  # 12, 23, 22 & 21
+  # PWM Fan mod
+  -D USERMOD_PWM_FAN
+  -D PWM_PIN=32
+  -D TACHO_PIN=33
+  # Ambient light sensor BH1750
+  -D USERMOD_BH1750
+  -D USERMOD_BH1750_FIRST_MEASUREMENT_AT=30000
+  -D USERMOD_BH1750_MAX_MEASUREMENT_INTERVAL=60000
+;  -D USERMOD_BH1750_MIN_MEASUREMENT_INTERVAL=10000
+;  -D USERMOD_BH1750_OFFSET_VALUE=2
+;  -D WLED_DEBUG
+  -UWLED_USE_MY_CONFIG
+lib_deps = ${esp32.lib_deps}
+  U8g2@~2.32.15 # Uncoment for display mod
+  paulstoffregen/OneWire@~2.3.6 # Uncoment for temperature mod
+  claws/BH1750 @ ^1.3.0 # Uncoment for light sensor mod
+board_build.partitions = ${esp32.default_partitions}
+
+[env:esp32_Dallas_sensor_PWM_fan_display_rotary_ambient_light_sensor_sound_mods]
+board = esp32dev
+platform = espressif32@3.5
+upload_speed = 460800
+monitor_speed = 115200
+;upload_protocol = espota
+# exchange for your WLED IP
+;upload_port = "10.0.0.94"
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_DISABLE_LOXONE
+  -D WLED_RELEASE_NAME=esp32_WLED_dev_board_04
+# Enable Ethernet shield
+;  -D WLED_USE_ETHERNET
+# Pins assigment and pixel count
+  -D BTNPIN=0
+  -D LEDPIN=2
+;  -D DATA_PINS=1,2
+;  -D PIXEL_COUNTS=150,150,150,150
+  -D IRPIN=-1
+  -D RLYPIN=16
+# User mods
+  # Dallas temperature sensor mod
+  -D USERMOD_DALLASTEMPERATURE
+  -D TEMPERATURE_PIN=4
+  # Display mod
+  # I2C display
+  -D USERMOD_FOUR_LINE_DISPLAY
+  -D USE_ALT_DISPlAY
+  -D FLD_PIN_SCL=22
+  -D FLD_PIN_SDA=21
+  -D FLD_TYPE=SH1106
+;  -D FLD_TYPE=SSD1306
+  # SPI display
+  ; -DFLD_SPI_DEFAULT
+  ; -D FLD_TYPE=SSD1306_SPI64
+  ; -D FLD_PIN_CLOCKSPI=14
+  ; -D FLD_PIN_DATASPI=13
+  ; -D FLD_PIN_DC=26
+  ; -D FLD_PIN_CS=15
+  ; -D FLD_PIN_RESET=27
+  # Rotary encoder mod
+  -D USERMOD_ROTARY_ENCODER_UI
+  -D ENCODER_DT_PIN=18
+  -D ENCODER_CLK_PIN=19
+  -D ENCODER_SW_PIN=17
+  # Multirelay mod
+  ; -D USERMOD_MULTI_RELAY  # 12, 23, 22 & 21
+  # PWM Fan mod
+  -D USERMOD_PWM_FAN
+  -D PWM_PIN=32
+  -D TACHO_PIN=33
+  # Ambient light sensor BH1750
+  -D USERMOD_BH1750
+  -D USERMOD_BH1750_FIRST_MEASUREMENT_AT=30000
+  -D USERMOD_BH1750_MAX_MEASUREMENT_INTERVAL=60000
+;  -D USERMOD_BH1750_MIN_MEASUREMENT_INTERVAL=10000
+;  -D USERMOD_BH1750_OFFSET_VALUE=2
+  # Sound reactive usermod
+  -D USERMOD_AUDIOREACTIVE
+;  -D WLED_DEBUG
+  -UWLED_USE_MY_CONFIG
+lib_deps = ${esp32.lib_deps}
+  U8g2@~2.32.15 # Uncoment for display mod
+  paulstoffregen/OneWire@~2.3.6 # Uncoment for temperature mod
+  claws/BH1750 @ ^1.3.0 # Uncoment for light sensor mod
+  https://github.com/blazoncek/arduinoFFT.git
 board_build.partitions = ${esp32.default_partitions}
