--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -1075,3 +1075,22 @@ lib_deps = ${esp32.lib_deps}
   claws/BH1750 @ ^1.3.0 # Uncoment for light sensor mod
   https://github.com/blazoncek/arduinoFFT.git
 board_build.partitions = ${esp32.default_partitions}
+
+[env:esp32_mpu650]
+board = esp32dev
+platform = espressif32@3.5
+upload_speed = 460800
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
+  -D WLED_RELEASE_NAME=esp32_mpu650
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  -D LEDPIN=16
+;  -D WLED_DEBUG
+
+  -UWLED_USE_MY_CONFIG
+lib_deps = ${esp32.lib_deps}
+  jrowberg/I2Cdevlib-MPU6050 @ ^1.0.0
+board_build.partitions = ${esp32.default_partitions}
