--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -1089,8 +1089,27 @@ build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_HUESYNC
   -D LEDPIN=16
 ;  -D WLED_DEBUG
-
+  -D USERMOD_MPU650
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
   jrowberg/I2Cdevlib-MPU6050 @ ^1.0.0
 board_build.partitions = ${esp32.default_partitions}
+
+[env:esp8266_mpu650]
+board = d1_mini
+platform = ${common.platform_wled_default}
+platform_packages = ${common.platform_packages}
+upload_speed = 460800
+board_build.ldscript = ${common.ldscript_4m1m}
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp8266}
+  -D WLED_RELEASE_NAME=esp8266_mpu650
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  -D IRPIN=-1
+  -D USERMOD_MPU650
+  -UWLED_USE_MY_CONFIG
+monitor_filters = esp8266_exception_decoder
+lib_deps = ${esp8266.lib_deps}
+  jrowberg/I2Cdevlib-MPU6050 @ ^1.0.0
