--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -1076,24 +1076,24 @@ lib_deps = ${esp32.lib_deps}
   https://github.com/blazoncek/arduinoFFT.git
 board_build.partitions = ${esp32.default_partitions}
 
-[env:esp32_mpu650]
-board = esp32dev
-platform = espressif32@3.5
-upload_speed = 460800
-build_unflags = ${common.build_unflags}
-build_flags = ${common.build_flags_esp32}
-  -D WLED_WATCHDOG_TIMEOUT=0
-  -D WLED_RELEASE_NAME=esp32_mpu650
-  -D WLED_DISABLE_BLYNK
-  -D WLED_DISABLE_CRONIXIE
-  -D WLED_DISABLE_HUESYNC
-  -D LEDPIN=16
-;  -D WLED_DEBUG
-  -D USERMOD_MPU650
-  -UWLED_USE_MY_CONFIG
-lib_deps = ${esp32.lib_deps}
-  jrowberg/I2Cdevlib-MPU6050 @ ^1.0.0
-board_build.partitions = ${esp32.default_partitions}
+; [env:esp32_mpu650]
+; board = esp32dev
+; platform = espressif32@3.5
+; upload_speed = 460800
+; build_unflags = ${common.build_unflags}
+; build_flags = ${common.build_flags_esp32}
+;   -D WLED_WATCHDOG_TIMEOUT=0
+;   -D WLED_RELEASE_NAME=esp32_mpu650
+;   -D WLED_DISABLE_BLYNK
+;   -D WLED_DISABLE_CRONIXIE
+;   -D WLED_DISABLE_HUESYNC
+;   -D LEDPIN=16
+; ;  -D WLED_DEBUG
+;   -D USERMOD_MPU650
+;   -UWLED_USE_MY_CONFIG
+; lib_deps = ${esp32.lib_deps}
+;   jrowberg/I2Cdevlib-MPU6050 @ ^1.0.0
+; board_build.partitions = ${esp32.default_partitions}
 
 [env:esp8266_mpu650]
 board = d1_mini
@@ -1113,3 +1113,25 @@ build_flags = ${common.build_flags_esp8266}
 monitor_filters = esp8266_exception_decoder
 lib_deps = ${esp8266.lib_deps}
   jrowberg/I2Cdevlib-MPU6050 @ ^1.0.0
+
+[env:esp32_mpu650_sensor]
+board = esp32dev
+platform = espressif32@3.5
+upload_speed = 460800
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
+  -D WLED_RELEASE_NAME=esp32_mpu650
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  ; -D LEDPIN=16
+  ; -D RLYPIN=19
+  ; -D BTNPIN=17
+  -D IRPIN=-1
+  -D USERMOD_MPU650
+;  -D WLED_DEBUG
+  -UWLED_USE_MY_CONFIG
+lib_deps = ${esp32.lib_deps}
+  jrowberg/I2Cdevlib-MPU6050 @ ^1.0.0
+board_build.partitions = ${esp32.default_partitions}
