--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -809,6 +809,7 @@ build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_HUESYNC
   -D WLED_DISABLE_LOXONE
   -D WLED_RELEASE_NAME=esp32_WLED_dev_board_01
+  -D SERVERNAME='"ESP32-WLED-dev"'
 # Enable Ethernet shield
 ;  -D WLED_USE_ETHERNET
 # Pins assigment and pixel count
