--- a/platformio.ini
+++ b/platformio.ini
@@ -385,11 +385,10 @@ lib_deps = ${esp32s2.lib_deps}
 platform = espressif32@5.1.1
 framework = arduino
 board = esp32-c3-devkitm-1
+upload_speed = 460800
 board_build.partitions = tools/WLED_ESP32_4MB_1MB_FS.csv
 build_flags = ${common.build_flags} ${esp32c3.build_flags} #-D WLED_RELEASE_NAME=ESP32-C3
   -D WLED_WATCHDOG_TIMEOUT=0
-upload_speed = 460800
-build_flags =
   -D WLED_RELEASE_NAME=esp32c3
 build_unflags = ${common.build_unflags}
 lib_deps = ${esp32c3.lib_deps}
@@ -401,7 +400,13 @@ platform = espressif32@5.1.1
 platform_packages = platformio/framework-arduinoespressif32@3.20004.220825
 upload_speed = 921600
 build_unflags = ${common.build_unflags}
-build_flags =  ${common.build_flags} ${esp32s3.build_flags} -D CONFIG_LITTLEFS_FOR_IDF_3_2 -D WLED_WATCHDOG_TIMEOUT=0 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=0 -D ARDUINO_USB_MSC_ON_BOOT=0
+build_flags =  ${common.build_flags} ${esp32s3.build_flags}
+  -D CONFIG_LITTLEFS_FOR_IDF_3_2
+  -D WLED_WATCHDOG_TIMEOUT=0
+  -D ARDUINO_USB_MODE=1
+  -D ARDUINO_USB_CDC_ON_BOOT=0
+  -D ARDUINO_USB_MSC_ON_BOOT=0
+  -D WLED_RELEASE_NAME=esp32s3
 lib_deps = ${esp32s3.lib_deps}
 board_build.partitions = tools/WLED_ESP32_8MB.csv
 board_build.f_flash = 80000000L
