--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -5,7 +5,7 @@
 # Please visit documentation: https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp8266_no_mods, esp8266_display_dallas, esp8266_PIRmod, esp8266_multirelay, esp8266_staircase_mod, esp32_display_dallas, esp32_PIRmod, esp32_multirelay, esp32_staircase_mod, esp32_no_mods, esp32_dmx, esp32s2_saola, esp32c3, esp01_1m_full_shield, esp32_display_rotary, esp32_pico_kit, SP501E_2m, SP511E_2M, esp32_16mb, esp32_ethernet, esp8266_debug, esp32_debug, esp32_display_dallas_rotary_encoder_battery_stat
+default_envs = esp8266_no_mods, esp8266_display_dallas, esp8266_PIRmod, esp8266_multirelay, esp8266_staircase_mod, esp32_display_dallas, esp32_PIRmod, esp32_multirelay, esp32_staircase_mod, esp32_no_mods, esp32_dmx, esp32s2_saola, esp32c3, esp01_1m_full_shield, esp32_display_rotary, esp32_pico_kit, SP501E_2m, SP511E_2M, esp32_16mb, esp32_ethernet, esp8266_debug, esp32_debug, esp32_display_dallas_rotary_encoder_battery_stat, esp32s3dev_8MB
 
 [env:esp8266_no_mods]
 board = d1_mini
@@ -369,6 +369,7 @@ build_flags = ${common.build_flags_esp32}
   -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
+board_build.partitions = ${esp32.default_partitions}
 
 ############ Test boards ################
 
