--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -55,7 +55,8 @@ build_flags = ${common.build_flags_esp8266}
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
   -D USERMOD_PIRSWITCH
-  -D IRPIN=-1 #  -D PIR_SENSOR_PIN=14
+;  -D PIR_SENSOR_PIN=14
+  -D IRPIN=-1
   -UWLED_USE_MY_CONFIG
 monitor_filters = esp8266_exception_decoder
 lib_deps = ${esp8266.lib_deps}
@@ -208,7 +209,8 @@ build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
-  -D USERMOD_MULTI_RELAY  # 5, 18, 32 & 36
+  -D USERMOD_PIRSWITCH
+;  -D PIR_SENSOR_PIN=14
   -D IRPIN=-1
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
