--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -432,7 +432,7 @@ build_flags = ${common.build_flags_esp32}
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
-  -D WLED_DISABLE_LOXONE
+;  -D WLED_DISABLE_LOXONE
   -D WLED_RELEASE_NAME=esp32_WLED_dev_board_01
   -D SERVERNAME='"ESP32-WLED-dev"'
 # Enable Ethernet shield
