--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -718,3 +718,44 @@ lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
   U8g2@~2.32.10
 board_build.partitions = ${esp32.default_partitions}
+
+[env:esp32_mini_1]
+board = pico32
+platform = espressif32@4.2
+upload_speed = 460800
+monitor_speed = 115200
+;upload_protocol = espota                                                                                                                                                                                                                                           upload_protocol = espota
+# exchange for your WLED IP
+;upload_port = "10.0.0.85"
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
+  -D WLED_RELEASE_NAME=esp32_mini_1_N4
+  -D SERVERNAME='"ESP32-mini-1-N4"'
+  -D BTNPIN=-1
+;  -D LEDPIN=2 ; GPIO - 2, 4, 16, 17
+  ; -D RLYPIN=-1
+  ; -D IRPIN=-1
+  -D WLED_DISABLE_ALEXA
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_DISABLE_LOXONE
+# Temperature usermod
+  ; -D USERMOD_DALLASTEMPERATURE
+  ; -D TEMPERATURE_PIN=25
+  ; -D USERMOD_DALLASTEMPERATURE_MEASUREMENT_INTERVAL=10000
+# Display usermod
+
+# Rotary encoder usermod
+  ; -D USERMOD_ROTARY_ENCODER_UI
+  ; -D ENCODER_DT_PIN=5
+  ; -D ENCODER_CLK_PIN=18
+  ; -D ENCODER_SW_PIN=19
+;  -D DEBUG=1
+;  -D WLED_DEBUG
+;  -DDEBUG_ESP_WIFI
+  -UWLED_USE_MY_CONFIG
+lib_deps = ${esp32.lib_deps}
+
+board_build.partitions = ${esp32.default_partitions}
