--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -569,8 +569,8 @@ build_flags = ${common.build_flags_esp32}
 # I2C display
   -D USERMOD_FOUR_LINE_DISPLAY
   -D USE_ALT_DISPlAY
-  -D FLD_PIN_SCL=22
-  -D FLD_PIN_SDA=21
+  ; -D FLD_PIN_SCL=22
+  ; -D FLD_PIN_SDA=21
 ;  -D FLD_TYPE=SH1106
   -D FLD_TYPE=SSD1306_64
 # SPI display
@@ -601,7 +601,7 @@ build_flags = ${common.build_flags_esp32}
 ;  -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
-  U8g2@~2.32.15 # Uncoment for display mod
+  U8g2@~2.34.5 # Uncoment for display mod
   paulstoffregen/OneWire@~2.3.6 # Uncoment for temperature mod
   claws/BH1750 @ ^1.2.0 # Uncoment for light sensor mod
 board_build.partitions = ${esp32.default_partitions}
