--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -801,3 +801,27 @@ lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
   olikraus/U8g2 @ ^2.34.5
 board_build.partitions = ${esp32.default_partitions}
+
+[env:esp32_bme280]
+board = esp32dev
+platform = espressif32@3.5
+upload_speed = 460800
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags_esp32}
+  -D WLED_WATCHDOG_TIMEOUT=0
+  -D WLED_RELEASE_NAME=ESP32_BME280_usermod
+  -D WLED_DISABLE_BLYNK
+  -D WLED_DISABLE_CRONIXIE
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_DISABLE_LOXONE
+;  -D FLD_PIN_SCL=22
+;  -D FLD_PIN_SDA=21
+  -D USERMOD_FOUR_LINE_DISPLAY
+  -D USE_ALT_DISPlAY
+  -D USERMOD_BME280
+  -UWLED_USE_MY_CONFIG
+;  -D WLED_DEBUG
+lib_deps = ${esp32.lib_deps}
+    olikraus/U8g2 @ ^2.34.5
+    finitespace/BME280@^3.0.0
+board_build.partitions = ${esp32.default_partitions}
